...
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="145dp">

        <Button
            android:id="@+id/currentJobButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0000FF"
            android:onClick="onCurrentJobClick"
            android:text="Enter CURRENT JOB"
            android:textColor="#FFFFFF" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

...
